--- a/.github/workflows/gem.yml
+++ b/.github/workflows/gem.yml
@@ -24,7 +24,7 @@ jobs:
           ruby-version: ${{ matrix.ruby_version }}
           bundler-cache: true
       - name: Inspect workflow context
-        run: "${{ startsWith(github.event.head_commit.message, 'Release :gem:') }}"
+        run: "${{ github.event.head_commit.message }}"
       - name: Extract Plugin Version
         id: plugin-meta
         run: echo "::set-output name=version::$(bundle exec ruby -e 'require "jekyll_test_plugin"; puts JekyllTestPlugin::VERSION')"
