--- a/.github/workflows/gem.yml
+++ b/.github/workflows/gem.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   release:
     if: "github.repository_owner == 'jekyll' && startsWith(github.event.head_commit.message, 'Release :gem:')"
-    name: "Build Gem (Ruby ${{ matrix.ruby_version }})"
+    name: "Release Gem (Ruby ${{ matrix.ruby_version }})"
     runs-on: "ubuntu-latest"
     strategy:
       fail-fast: true
@@ -29,7 +29,7 @@ jobs:
         shell: bash
       - name: Tag Details
         run: |
-          echo ${{ toJSON(github.event) }} > event.json
+          echo '${{ toJSON(github.event) }}' > event.json
           bundle exec ruby .github/workflows/scripts/tag_info.rb
       - name: "Build Gem (JekyllTestPlugin ${{ steps.plugin-meta.outputs.version }})"
         run: gem build jekyll_test_plugin.gemspec
