--- a/.github/workflows/gem.yml
+++ b/.github/workflows/gem.yml
@@ -28,9 +28,7 @@ jobs:
         run: echo "::set-output name=version::$(bundle exec ruby -e 'require "jekyll_test_plugin"; puts JekyllTestPlugin::VERSION')"
         shell: bash
       - name: Tag Details
-        run: |
-          echo '${{ toJSON(github.event) }}' > event.json
-          bundle exec ruby .github/workflows/scripts/tag_info.rb
+        run: bundle exec ruby .github/workflows/scripts/tag_info.rb ${{ toJSON(github.event) }}
       - name: "Build Gem (JekyllTestPlugin ${{ steps.plugin-meta.outputs.version }})"
         run: gem build jekyll_test_plugin.gemspec
       - name: Archive gem as artifact
